--- a/DistributedTestModels/DistributedTestEnvironmentUI/Views/MainView.xaml
+++ b/DistributedTestModels/DistributedTestEnvironmentUI/Views/MainView.xaml
@@ -2,8 +2,8 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
         xmlns:l="clr-namespace:DistributedTestEnvironmentUI"
-        xmlns:local="clr-namespace:DistributedTestEnvironmentUI.Models"
-        Title="Distributed Test Environment" Height="615" Width="745">
+        xmlns:local="clr-namespace:DTEModels.Models;assembly=DTEModels"
+        Title="Distributed Test Environment" Height="615" Width="745" WindowStyle="ThreeDBorderWindow" BorderThickness="2" Foreground="#FF2612EE" BorderBrush="Black">
     <Window.Resources>
         <HierarchicalDataTemplate DataType="{x:Type local:ComputerNodeModel}" ItemsSource="{Binding Path=ProcessList}">
             <TextBlock Text="{Binding NodeName}"  />
@@ -12,53 +12,78 @@
             <TextBlock Text="{Binding ProcessName}" Margin="5" />
         </HierarchicalDataTemplate>
     </Window.Resources>
+	<Window.Background>
+		<LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+			<GradientStop Color="#FFB2B5F0" Offset="0"/>
+			<GradientStop Color="White" Offset="1"/>
+		</LinearGradientBrush>
+	</Window.Background>
+	<Window.Effect>
+		<DropShadowEffect/>
+	</Window.Effect>
     <DockPanel>
+
+
         <Menu DockPanel.Dock="Top" Height="20">
 
             <MenuItem Header="Node">
-                <Button Content="Add" Height="30" VerticalAlignment="Top"  Width="50" Command="{Binding AddNodeCmd}"/>
-                <Button Content="Remove" Height="30" VerticalAlignment="Top"  HorizontalAlignment="Right" Width="50"  Command="{Binding RemoveNodeCmd}"/>
+                <MenuItem Header="Add"  Command="{Binding AddNodeCmd}"/>
+                <MenuItem Header="Add External"  Command="{Binding AddNodeCmd}"/>
+                <MenuItem Header="Remove"  Command="{Binding RemoveNodeCmd}"/>
             </MenuItem>
             <MenuItem Header="Process">
-                <Button Content="Add" Height="30" VerticalAlignment="Top"  Width="45" Command="{Binding AddProcessCmd}"/>
-                <Button Content="Remove" Height="30" VerticalAlignment="Top"  HorizontalAlignment="Right" Width="45" Command="{Binding RemoveProcessCmd}"/>
+                <MenuItem Header="Add"  Command="{Binding AddProcessCmd}"/>
+                <MenuItem Header="Add External"  Command="{Binding AddProcessCmd}"/>
+                <MenuItem Header="Remove"  Command="{Binding RemoveProcessCmd}"/>
             </MenuItem>
 
 
 
         </Menu>
-        <TabControl DockPanel.Dock="Bottom" Height="175">
-            <TabItem Header="Log">
+
+
+        <TabControl DockPanel.Dock="Bottom" Height="175" >
+            <TabItem Header="Log" >
                 <DataGrid ItemsSource="{Binding LogDataGrid}" AutoGenerateColumns="True" HorizontalAlignment="Left"  VerticalAlignment="Top" />
 
             </TabItem>
         </TabControl>
 
         <StackPanel Orientation="Vertical" DockPanel.Dock="Left" Width="200" >
-            <TreeView DockPanel.Dock="Left" Width="200" Height="370" VerticalAlignment="Bottom"
-             ItemsSource="{Binding ProcessNodes}" SelectedItemChanged="SelectionChanged" />
-
+            <Viewbox>
+                <TreeView Width="200" VerticalAlignment="Bottom" Height="370"
+             ItemsSource="{Binding TestEnvironment.ProcessNodes}" SelectedItemChanged="SelectionChanged" />
+            </Viewbox>
         </StackPanel>
-
+        <Viewbox>
         <Grid Margin="0,0,0,5">
-            <TextBox Height="23" TextWrapping="Wrap" IsReadOnly="True" Text="{Binding Path=CurrentProcess.FrameworkHost}" Margin="130,20,261,341"/>
-            <TextBlock HorizontalAlignment="Left" Margin="39,27,0,0" TextWrapping="Wrap" Text="Host Name" VerticalAlignment="Top" Width="134"/>
-            <Border BorderBrush="Black" BorderThickness="1" Margin="10,114,31,202"/>
-            <TextBox IsReadOnly="True"  Height="23" TextWrapping="Wrap" Text="{Binding Path=CurrentProcess.ProcessName}" Margin="130,55,261,306"/>
-            <TextBox IsReadOnly="True" Height="23" TextWrapping="Wrap" Text="{Binding Path=CurrentProcess.FrameworkPort}" Margin="130,84,261,277"/>
-            <TextBox Height="23" TextWrapping="Wrap" Text="{Binding Path=CurrentProcess.Routing.Faults.Delay_ms}" Margin="195,121,266,240"/>
-            <CheckBox Content="Delay" Margin="125,125,342,237" IsThreeState="False" IsChecked="{Binding Path=CurrentProcess.Routing.Faults.DelayMessage, Mode=TwoWay}"/>
-            <CheckBox Content="Duplicate" Width="100" Margin="25,152,412,210" IsThreeState="False" IsChecked="{Binding Path=CurrentProcess.Routing.Faults.DuplicateMessage, Mode=TwoWay}" />
-            <CheckBox Content="Corrupt" Margin="315,122,152,240" IsThreeState="False" IsChecked="{Binding Path=CurrentProcess.Routing.Faults.CorruptMessage, Mode=TwoWay}" />
-            <CheckBox Content="Lose" Width="100" Margin="25,125,412,237" IsThreeState="False" IsChecked="{Binding Path=CurrentProcess.Routing.Faults.LoseMessage, Mode=TwoWay}"/>
-            <CheckBox Content="Out of Order" Width="100" Margin="126,154,311,202" IsThreeState="False" IsChecked="{Binding Path=CurrentProcess.Routing.Faults.ReverseOrderMessage, Mode=TwoWay}"/>
-            <TextBlock HorizontalAlignment="Left" Margin="39,55,0,0" TextWrapping="Wrap" Text="Process Name" VerticalAlignment="Top" Width="134"/>
-            <TextBlock HorizontalAlignment="Left" Margin="38,87,0,0" TextWrapping="Wrap" Text="Port Number" VerticalAlignment="Top" Width="134"/>
-            <Button Content="Start" Width="70" Margin="315,20,152,340" Command="{Binding StartProcessCmd}"/>
-            <Button Content="Stop" Width="70" Margin="315,67,152,293" Command="{Binding StopProcessCmd}"/>
+            <TextBox TextWrapping="Wrap" IsReadOnly="True" Text="{Binding Path=CurrentProcess.FrameworkHost}" Margin="130,27,261,341"/>
+            <TextBlock HorizontalAlignment="Left" Margin="39,27,0,0" TextWrapping="Wrap" Text="Host Name" VerticalAlignment="Top" Width="73"/>
+            <TextBox IsReadOnly="True" TextWrapping="Wrap" Text="{Binding Path=CurrentProcess.ProcessName}" Margin="130,51,261,318"/>
+            <TextBox IsReadOnly="True" TextWrapping="Wrap" Text="{Binding Path=CurrentProcess.FrameworkPort}" Margin="130,73,261,295"/>
+
+            <TextBlock HorizontalAlignment="Left" Margin="39,50,0,0" TextWrapping="Wrap" Text="Process Name" VerticalAlignment="Top" Width="86"/>
+            <TextBlock HorizontalAlignment="Left" Margin="38,73,0,0" TextWrapping="Wrap" Text="Port Number" VerticalAlignment="Top" Width="74"/>
+            <Button Content="Start" Width="70" Margin="300,27,167,333" Command="{Binding StartProcessCmd}">
+
+            </Button>
+
+            <Button Content="Stop" Width="70" Margin="300,65,167,295" Command="{Binding StopProcessCmd}"/>
+
+            <GroupBox Header="Fault Injection" HorizontalAlignment="Left" Height="78" Margin="10,112,0,0" VerticalAlignment="Top" Width="472">
+
+            </GroupBox>
+            <CheckBox Content="Delay" Margin="111,135,374,233" IsThreeState="False" IsChecked="{Binding Path=CurrentProcess.Routing.Faults.DelayMessage, Mode=TwoWay}" Foreground="#FF240FF7"/>
+            <TextBox TextWrapping="Wrap" Text="{Binding Path=CurrentProcess.Routing.Faults.Delay_ms}" Margin="168,135,317,236"/>
+            <CheckBox Content="Duplicate" Margin="25,159,435,208" IsThreeState="False" IsChecked="{Binding Path=CurrentProcess.Routing.Faults.DuplicateMessage, Mode=TwoWay}" Foreground="#FF240FF7" />
+            <CheckBox Content="Corrupt" Margin="238,135,229,237" IsThreeState="False" IsChecked="{Binding Path=CurrentProcess.Routing.Faults.CorruptMessage, Mode=TwoWay}" Foreground="#FF240FF7" />
+            <CheckBox Content="Lose" Margin="25,135,462,230" IsThreeState="False" IsChecked="{Binding Path=CurrentProcess.Routing.Faults.LoseMessage, Mode=TwoWay}" Foreground="#FF240FF7"/>
+            <CheckBox Content="Out of Order" Margin="111,159,334,213" IsThreeState="False" IsChecked="{Binding Path=CurrentProcess.Routing.Faults.ReverseOrderMessage, Mode=TwoWay}" Foreground="#FF240FF7"/>
+            <GroupBox Header="Process" HorizontalAlignment="Left" Height="97" Margin="10,10,0,0" VerticalAlignment="Top" Width="472"/>
+
 
         </Grid>
 
-
+        </Viewbox>
     </DockPanel>
 </Window>
